tests/trybuild-failures/not_binary_expression.stderr
error[E0308]: mismatched types
 --> $DIR/not_binary_expression.rs:4:16
  |
4 |     assertify!("foo");
  |     -----------^^^^^-
  |     |          |
  |     |          expected `bool`, found `&str`
  |     expected due to this
  |
  = note: this error originates in the macro `proc_macro_call` which comes from the expansion of the macro `assertify` (in Nightly builds, run with -Z macro-backtrace for more info)
